--- a/public/styles/font.css
+++ b/public/styles/font.css
@@ -7,14 +7,16 @@
     font-style: normal;
 }
 
-/* @font-face {
-    font-family: 'MyFont';
-    src: url('/fonts/MyFont-Bold.woff2') format('woff2');
-    font-weight: 700;
+@font-face {
+    font-family: 'NeueHaasDisplayLight';
+    src: url('/fonts/NeueHaasDisplayLight.ttf') format('woff2');
+    font-weight: 400;
     font-style: normal;
-} */
+}
 
-/* Apply the font globally (optional) */
-body {
-    font-family: 'MyFont', sans-serif;
+@font-face {
+    font-family: 'NeueHaasDisplayRegular';
+    src: url('/fonts/NeueHaasDisplayRoman.ttf') format('woff2');
+    font-weight: normal;
+    font-style: normal;
 }
