--- a/public/styles/font.css
+++ b/public/styles/font.css
@@ -1,22 +1,118 @@
 /* styles/font.css */
 
 @font-face {
-    font-family: 'NeueHaasDisplayMedium';
-    src: url('/fonts/NeueHaasDisplayMediu.ttf') format('woff2');
-    font-weight: 400;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: 'NeueHaasDisplayLight';
-    src: url('/fonts/NeueHaasDisplayLight.ttf') format('woff2');
-    font-weight: 400;
-    font-style: normal;
-}
-
-@font-face {
-    font-family: 'NeueHaasDisplayRegular';
-    src: url('/fonts/NeueHaasDisplayRoman.ttf') format('woff2');
+    font-family: 'neue_haas_grotesk_displa95Blk';
+    src: url('/fonts/neuehaasdisplayblack-webfont.woff2') format('woff2'),
+         url('/fonts/neuehaasdisplayblack-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
+
+}
+
+@font-face {
+    font-family: 'neue_haas_grotesk_disp96BlkIt';
+    src: url('/fonts/neuehaasdisplayblackitalic-webfont.woff2') format('woff2'),
+         url('/fonts/neuehaasdisplayblackitalic-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+@font-face {
+    font-family: 'neue_haas_grotesk_display75Bd';
+    src: url('/fonts/neuehaasdisplaybold-webfont.woff2') format('woff2'),
+         url('/fonts/neuehaasdisplaybold-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+@font-face {
+    font-family: 'neue_haas_grotesk_displ76BdIt';
+    src: url('/fonts/neuehaasdisplaybolditalic-webfont.woff2') format('woff2'),
+         url('/fonts/neuehaasdisplaybolditalic-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+@font-face {
+    font-family: 'neue_haas_grotesk_display45Lt';
+    src: url('/fonts/neuehaasdisplaylight-webfont.woff2') format('woff2'),
+         url('/fonts/neuehaasdisplaylight-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+@font-face {
+    font-family: 'neue_haas_grotesk_display65Md';
+    src: url('/fonts/neuehaasdisplaymediu-webfont.woff2') format('woff2'),
+         url('/fonts/neuehaasdisplaymediu-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+@font-face {
+    font-family: 'neue_haas_grotesk_displ66MdIt';
+    src: url('/fonts/neuehaasdisplaymediumitalic-webfont.woff2') format('woff2'),
+         url('/fonts/neuehaasdisplaymediumitalic-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+@font-face {
+    font-family: 'neue_haas_grotesk_disp55roman';
+    src: url('/fonts/neuehaasdisplayroman-webfont.woff2') format('woff2'),
+         url('/fonts/neuehaasdisplayroman-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+@font-face {
+    font-family: 'neue_haas_grotesk_di56romanIt';
+    src: url('/fonts/neuehaasdisplayromanitalic-webfont.woff2') format('woff2'),
+         url('/fonts/neuehaasdisplayromanitalic-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+@font-face {
+    font-family: 'neue_haas_grotesk_display35Th';
+    src: url('/fonts/neuehaasdisplaythin-webfont.woff2') format('woff2'),
+         url('/fonts/neuehaasdisplaythin-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+@font-face {
+    font-family: 'neue_haas_grotesk_displa25xTh';
+    src: url('/fonts/neuehaasdisplayxthin-webfont.woff2') format('woff2'),
+         url('/fonts/neuehaasdisplayxthin-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+@font-face {
+    font-family: 'neue_haas_grotesk_disp26xThIt';
+    src: url('/fonts/neuehaasdisplayxthinitalic-webfont.woff2') format('woff2'),
+         url('/fonts/neuehaasdisplayxthinitalic-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+@font-face {
+    font-family: 'neue_haas_grotesk_displ15xxTh';
+    src: url('/fonts/neuehaasdisplayxxthin-webfont.woff2') format('woff2'),
+         url('/fonts/neuehaasdisplayxxthin-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
 }
