--- a/public/styles/mainstyle.css
+++ b/public/styles/mainstyle.css
@@ -1,5 +1,10 @@
 /*Common*/
-.homeCmnHead{}
+.homeCmnSubHead{font-size: 18px;line-height: 1em;margin: 0 0 15px;color: #666666;text-transform: uppercase;}
+.homeCmnHead{font-size: 48px;line-height: 1em;font-family: var(--medium);margin: 0;color: #333333;}
+
+.exploreMoreBtn{display:flex;justify-content:center;align-items:center;border:1px solid #002581;font-size:18px;line-height:1em;position:relative;padding:15px 45px 15px 15px;border-radius:5px;color:#002581;font-family:var(--medium);}
+.exploreMoreBtn::after{content:"";position:absolute;top:50%;right:20px;width:16px;height:16px;background-image:url('/images/icons/right-arrow.svg');background-size:contain;background-repeat:no-repeat;background-position:center;transform:translateY(-50%);}
+
 
 
 /*Banner*/
@@ -31,10 +36,34 @@
 
 
 /*our associate*/
-.ourAssociatesWrap{padding: 120px 0 200px; background: linear-gradient(rgba(255, 255, 255, 0.9)), url('/images/home/bg-approvals-and-associates.jpg') no-repeat center center; background-size: cover; color: #fff; position: relative;border-radius:100px 100px 0 0;}
-.ourAssociatesSlider .associateSlide{position:relative;display: flex;justify-content: center;align-items: center;flex-direction: column;gap: 15px;}
+.ourAssociatesWrap{padding: 120px 0 300px; background: linear-gradient(rgba(255, 255, 255, 0.9)), url('/images/home/bg-approvals-and-associates.jpg') no-repeat center center; background-size: cover; color: #fff; position: relative;border-radius:100px 100px 0 0;}
+.ourAssociatesHead{padding-bottom: 60px;display: flex;justify-content: space-between;align-items: flex-end;}
+.ourAssociatesHeadCont > p{font-size: 18px;line-height: 1.4em;color: #111111;}
+.ourAssociatesHeadCont > p > em{display: block;}
+.ourAssociatesSlider{position: relative;}
+.associateSlide{position:relative;display: flex;justify-content: center;align-items: center;flex-direction: column;gap: 15px;}
 .associateSlide  .associateImg > img{border-radius: 20px;}
-.associateSlide .associateDesc{font-size: 16px;line-height: 1.4em;color: #000;font-family: var(--medium);text-align: center;}
+.associateSlide .associateDesc{font-size: 22px;line-height: 1.3em;color: #000;font-family: var(--medium);text-align: center;color: #444444;}
+
+.SliderCustomNav {pointer-events:none;z-index:10;width:100%;position:absolute;bottom:-90px;left:0;}
+.SlierNavBtn {position:absolute;top:50%;transform:translateY(-50%);width:45px;height:45px;display:flex;justify-content:center;align-items:center;cursor:pointer;transition:all 0.3s ease;user-select:none;pointer-events:all;background-repeat:no-repeat;background-position:center;background-size:20px 20px;}
+.SliderPrevBtn {left:50%;transform:translate(-150%,-50%);background-image:url('/images/icons/nav-left.svg');}
+.SliderNextBtn {right:50%;transform:translate(150%,-50%);background-image:url('/images/icons/nav-right.svg');}
 
 /*our certification*/
 .ourCertificationWrap{padding: 120px 0 200px; background: #fff; position: relative;border-radius:100px 100px 0 0;margin-top: -80px;}
+.ourCertificationHead{padding-bottom: 60px;display: flex;justify-content: space-between;align-items: flex-end;}
+.ourCertificationSlider{position: relative;}
+.certificationSlide{position:relative;display: flex;justify-content: center;align-items: center;flex-direction: column;gap: 25px;}
+.certificationContent{display: flex;justify-content: center;align-items: center;flex-direction: column;text-align: center;}
+.certificationContent > h3{font-size: 22px;line-height: 1.3em;font-family: var(--medium);color: #444444;}
+.certificationContent > p{font-size: 18px;line-height: 1.3em;}
+
+/*tesimonials*/
+.tesimonialsWrap{padding: 120px 0 300px; background: linear-gradient(rgba(17, 17, 17, 0.8)), url('/images/home/bg-testimonials.jpg') no-repeat center center; background-size: cover; color: #fff; position: relative;border-radius:100px 100px 0 0;}
+
+
+/*view our profile*/
+.viewOurProfileWrap{height: 90vh;background: linear-gradient(rgba(0, 22, 42, 0.6)), url('/images/home/bg-corporate-profile.jpg') no-repeat center center; background-size: cover; color: #fff; position: relative;border-radius:100px 100px 0 0;}
+.viewOurProfileBody{height: 100%;display: flex;justify-content: center;align-items: center;flex-direction: column;gap: 20px;}
+.viewOurProfileBody > h2{color: #fff;}
