--- a/app/globals.css
+++ b/app/globals.css
@@ -46,14 +46,16 @@ p>em {display:block;}
 
 
 /*Footer*/
-.footerWrap {padding:120px 0;background:linear-gradient(rgba(20,33,61,0.93),rgba(20,33,61,0.93)),url('/images/footer-bg.jpg') no-repeat center center;background-size:cover;border-radius:100px 100px 0 0;color:#fff;position:relative;}
+.footerWrap {padding:140px 0;background:linear-gradient(rgba(20,33,61,0.93),rgba(20,33,61,0.93)),url('/images/footer-bg.jpg') no-repeat center center;background-size:cover;border-radius:100px 100px 0 0;color:#fff;position:relative;}
 .footerLogoSec {display:flex;justify-content:space-between;padding:0 0 60px;}
 .footerLogoSec {display:flex;align-items:flex-start;gap:40px;}
-.footerLogoImg {display:flex;align-items:center;gap:20px;}
-.footerContact {display:flex;gap:30px;}
-.footerContact>div>b {font-family:var(--medium);font-size:18px;line-height:1em;}
+.footerLogoImg {display:flex;align-items:center;gap:30px;}
+.footerLogoImg .dividerVertical{height: 80px;}
+.footerContact {display:flex;gap:60px;align-items: center;}
+.footerContact>div>b {font-family:var(--medium);font-size:18px;line-height:1em;margin: 0;}
 .footerContact>div>span {display:block;padding-top:5px;}
 .footerContact>div>span>a {color:#fff;}
+.footerContact .dividerVertical{height: 50px;width: 1px;}
 .dividerVertical {width:2px;height:30px;background-color:#556075;}
 .footerDividerHorizontal {width:100%;height:1px;background-color:#666666;}
 .footerAddressSec {padding:60px 0;display:flex;justify-content:space-between;}
@@ -63,15 +65,18 @@ p>em {display:block;}
 .footerAboutSec {padding:60px 0;display:flex;justify-content:space-between;}
 .footerAboutCont>p {font-size:12px;}
 .footerAboutCont>p>em {display:block;}
-.footerAboutCont>a {}
+.footerAboutCont > a { position: relative; display: inline-flex; align-items: center; color: #fff;padding-right: 30px; transition: color 0.3s ease; }
+.footerAboutCont > a::before { content: ""; position: absolute; right: 0; width: 18px; height: 18px; background: url("/images/icons/right-arrow-white.svg") center/contain no-repeat; transition: transform 0.3s ease; }
+.footerAboutCont > a:hover::before { transform: translateX(3px); }
 .footerSocialMediaLinks {display:flex;gap:10px;}
 .footerLinkNav {display:flex;gap:60px;}
-.footerLinkNav>ul>li>a {display: block;font-size:18px;line-height:1.4em;margin:0 0 8px;}
-.footerBottomSec {padding:30px 0 0;display:flex;justify-content:space-between;}
+.footerLinkNav>ul>li>a {display: block;font-size:18px;line-height:1.4em;margin:0 0 8px;transition: all 0.3s ease;}
+.footerLinkNav>ul>li>a:hover{color:#848484;}
+.footerBottomSec {padding:40px 0 0;display:flex;justify-content:space-between;}
 .footerBottomSecLft>p {margin:0;font-size:14px;}
-.footerBottomSecRght>em {display:block;color:#878787;font-size:12px;line-height:1em;font-style:normal;}
-.footerBody b {display:block;font-size:20px;line-height:1em;margin:0 0 12px;font-family:var(--bold);}
-.footerBody p {font-size:18px;line-height:1.4em;margin:0 0 24px;}
+.footerBottomSecRght>em {display:block;color:#878787;font-size:16px;line-height:1em;font-style:normal;}
+.footerBody b {display:block;font-size:20px;line-height:1em;margin:0 0 16px;font-family:var(--bold);}
+.footerBody p {font-size:18px;line-height:1.5em;margin:0 0 24px;}
 
 
 
