--- a/public/styles/mainstyle.css
+++ b/public/styles/mainstyle.css
@@ -1,24 +1,25 @@
 /*Common*/
 .homeCmnSubHead{font-size: 18px;line-height: 1em;margin: 0 0 15px;color: #666666;text-transform: uppercase;}
 .homeCmnHead{font-size: 48px;line-height: 1em;font-family: var(--medium);margin: 0;color: #333333;}
-
-.exploreMoreBtn{display:flex;justify-content:center;align-items:center;border:1px solid #002581;font-size:18px;line-height:1em;position:relative;padding:15px 45px 15px 15px;border-radius:5px;color:#002581;font-family:var(--medium);}
+.exploreMoreBtn{display:flex;justify-content:center;align-items:center;border:1px solid #002581;font-size:18px;line-height:1em;position:relative;padding:15px 45px 15px 15px;border-radius:5px;color:#002581;font-family:var(--medium);transition: all 0.5s ease;}
 .exploreMoreBtn::after{content:"";position:absolute;top:50%;right:20px;width:16px;height:16px;background-image:url('/images/icons/right-arrow.svg');background-size:contain;background-repeat:no-repeat;background-position:center;transform:translateY(-50%);}
+.exploreMoreBtn:hover{background: #002581;color: #fff;}
 
 
 /*Banner*/
 .bannerWrap { height: 100vh; background: linear-gradient(rgba(7, 22, 55, 0.85), rgba(7, 22, 55, 0.85)), url('/images/home/banner-home-bg.jpg') no-repeat center center; background-size: cover; color: #fff; position: relative;}
 .bannerWrap .container{height: 100%;}
 .bannerContent{display: flex;justify-content: space-between;align-items: center;height: 100%;}
-.bannerContentLft > h1{font-size: 40px;line-height: 1.2em;margin: 0;position: relative;}
-.bannerContentLft > h1:before{content:"";position: absolute;bottom: 0;}
+.bannerContentLft > h1{font-size: 60px;line-height: 1em;margin: 0;position: relative;padding-bottom:20px;}
+.bannerContentLft > h1::after { content: ''; position: absolute; bottom: -8px; left: 0; width: 50px; height: 3px; background-color: #919191; }
 .bannerContentLft > h1 > em,.bannerContentLft > p > em{display: block;}
+.bannerContentLft > p {font-size: 20px;line-height: 1.5em;padding-top: 30px;}
 .bannerGrid{display:grid;grid-template-columns: repeat(2, 1fr);gap: 20px;}
-.bannerGridItem{border-radius:10px;background:#22345A;padding: 25px;min-width: 450px;}
+.bannerGridItem{border-radius:10px;background:#22345A;padding: 30px 25px;min-width: 450px;}
 .bannerGridItem > em{display: block;color: #808EAB;font-style: normal;font-size: 30px;line-height: 1em;padding-bottom: 15px;border-bottom: 1px solid #808EAB;font-family: var(--light);}
-.bannerGridItem > h2{padding: 25px 0 10px;font-family: var(--medium);line-height: 1.2em;}
+.bannerGridItem > h2{padding: 70px 0 15px;font-family: var(--medium);line-height: 1.2em;}
 .bannerGridItem > h2 > em {display: block;}
-.bannerGridItem > p{font-size: 18px;max-width: 350px;}
+.bannerGridItem > p{font-size: 18px;max-width: 350px;line-height: 1.4em;}
 
 /*area of applications*/
 .areaOfApplicationsWrap { padding: 80px 0; }  
@@ -32,7 +33,6 @@
 .skeleton-img { height: 200px; background: #ccc; border-radius: 20px; }  
 .skeleton-title { height: 30px; width: 50%; background: #ddd; border-radius: 6px; }  
 .skeleton-text { height: 20px; width: 100%; background: #eee; border-radius: 6px; }  
-
 
 /*our associate*/
 .ourAssociatesWrap{padding: 120px 0 300px; background: linear-gradient(rgba(255, 255, 255, 0.9)), url('/images/home/bg-approvals-and-associates.jpg') no-repeat center center; background-size: cover; color: #fff; position: relative;border-radius:100px 100px 0 0;}
@@ -50,7 +50,7 @@
 .SliderNextBtn {right:50%;transform:translate(150%,-50%);background-image:url('/images/home/right-arrow.svg');}
 
 /*our certification*/
-.ourCertificationWrap{padding: 120px 0 200px; background: #fff; position: relative;border-radius:100px 100px 0 0;margin-top: -80px;}
+.ourCertificationWrap{padding: 120px 0 200px; background: #fff; position: relative;border-radius:100px 100px 0 0;margin-top: -100px;}
 .ourCertificationHead{padding-bottom: 60px;display: flex;justify-content: space-between;align-items: flex-end;}
 .ourCertificationSlider{position: relative;}
 .certificationSlide{position:relative;display: flex;justify-content: center;align-items: center;flex-direction: column;gap: 25px;}
@@ -59,23 +59,21 @@
 .certificationContent > p{font-size: 18px;line-height: 1.3em;}
 
 /*tesimonials*/
-.tesimonialsWrap{padding: 120px 0 300px; background: linear-gradient(rgba(17, 17, 17, 0.8)), url('/images/home/bg-testimonials.jpg') no-repeat center center; background-size: cover; color: #fff; position: relative;border-radius:100px 100px 0 0;}
-.tesimonialsHead .homeCmnSubHead,.tesimonialsHead .homeCmnHead{color: #fff;}
-.testimonialsBody{padding: 60px 0 0;position: relative;}
-.testimonialItem{display: flex;flex-direction: column;gap: 0;align-items: center;justify-content: center;padding: 40px;border: 1px solid #7B7B7B;border-radius: 20px;text-align: center;}
+.tesimonialsWrap{padding: 150px 0 250px; background: linear-gradient(rgba(17, 17, 17, 0.8)), url('/images/home/bg-testimonials.jpg') no-repeat center center; background-size: cover; color: #fff; position: relative;border-radius:100px 100px 0 0;margin-top: -100px;z-index: 1;}
+.testimonialsHead .homeCmnSubHead,.testimonialsHead .homeCmnHead{color: #fff;}
+.testimonialsBody{padding: 40px 0 0;position: relative;}
+.testimonialItem{display: flex;flex-direction: column;gap: 0;align-items: center;justify-content: center;padding: 80px 65px;border: 1px solid #7B7B7B;border-radius: 20px;text-align: center;}
 .testimonialItem > h3{font-size: 24px;line-height: 1em;margin: 20px 0 5px;}
 .testimonialDesignation{font-family: var(--medium);font-size: 18px; }
-.testimonialDescription{font-size: 18px;line-height: 1.4em;margin: 30px 0 60px;}
-.testimonialsBody .SliderCustomNav{position: absolute;top: -20px;right: 0;bottom: unset;} 
-.testimonialsBody .SliderPrevBtn {left:100%;transform:translate(-150%,-50%);background-image:url('/images/home/left-arrow.svg');} 
-.testimonialsBody .SliderNextBtn {right:0;transform:translate(150%,-50%);background-image:url('/images/home/right-arrow.svg');}
+.testimonialDescription{font-size: 18px;line-height: 1.4em;margin: 50px 0 60px;}
+.testimonialsSliderNav { position: absolute; top: -40px; right: 0; display: flex;gap: 15px; z-index: 10; }
+.testimonialsSlierNavBtn  { width: 40px; height: 40px; background-image: url('/images/home/left-arrow.svg'); background-size: contain; background-repeat: no-repeat; cursor: pointer; }
+.testimonialsSlierNavBtn.testimonialsSliderNextBtn { rotate: 180deg; }
 
 /*view our profile*/
-.viewOurProfileWrap{height: 90vh;background: linear-gradient(rgba(0, 22, 42, 0.6)), url('/images/home/bg-corporate-profile.jpg') no-repeat center center; background-size: cover; color: #fff; position: relative;border-radius:100px 100px 0 0;}
+.viewOurProfileWrap{height: 100vh;background: linear-gradient(rgba(0, 22, 42, 0.6)), url('/images/home/bg-corporate-profile.jpg') no-repeat center center; background-size: cover; color: #fff; position: relative;border-radius:100px 100px 0 0;margin-top: -100px;z-index: 1;}
 .viewOurProfileBody{height: 100%;display: flex;justify-content: center;align-items: center;flex-direction: column;gap: 25px;}
 .viewOurProfileBody > h2{color: #fff;margin-bottom: 10px;}
-
-
 .playButtonWrap { display: inline-block; cursor: pointer; margin: 20px 0; transition: transform 0.3s ease; }
 .playButtonWrap:hover { transform: scale(1.1); }
 .videoPopupOverlay { position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.8); display: flex; justify-content: center; align-items: center; z-index: 9999; }
@@ -85,22 +83,42 @@
 .videoWrapper { position: relative; padding-bottom: 56.25%; height: 0; }
 .videoWrapper iframe { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }
 
-
-
-
 /*our products*/
-.ourProductsWrap{padding: 120px 0 0; background: #333333; position: relative;border-radius:100px 100px 0 0;margin-top: -80px;}
-.ourProductsHead{display: flex;justify-content: space-between;padding-bottom: 40px;}
+.ourProductsWrap{padding: 150px 0 0; background: #333333; position: relative;border-radius:100px 100px 0 0;margin-top: -100px;}
+.ourProductsHead{display: flex;justify-content: space-between;padding-bottom: 40px;align-items: flex-end;}
 .ourProductsHeadLft .homeCmnSubHead,.ourProductsHeadLft .homeCmnHead{color: #fff;}
+.ourProductsHeadRght .exploreMoreBtn{color: #fff;border-color: #fff;}
+.ourProductsHeadRght .exploreMoreBtn:hover{background-color: #fff;color: #000;}
 .ourProductsBody { position: relative; } 
-.ourProductsBody .SliderCustomNav { position: absolute; top: -60px; right: 0; display: flex; gap: 10px; } 
-.SlierNavBtn { width: 40px; height: 40px; background-size: contain; background-repeat: no-repeat; background-position: center; cursor: pointer; } 
-.SliderPrevBtn { background-image: url("/images/home/left-arrow.svg"); } 
-.SliderNextBtn { background-image: url("/images/home/right-arrow.svg"); } 
+.ourProductsSliderNav { position: absolute; top: 60px; right: 100px; display: flex;gap: 15px; z-index: 10; }
+.ourProductsSlierNavBtn{ width: 40px; height: 40px; background-image: url('/images/home/left-arrow.svg'); background-size: contain; background-repeat: no-repeat; cursor: pointer; }
+.ourProductsSlierNavBtn.ourProductsSliderNextBtn { rotate: 180deg; }
 .productItem { display: block; position: relative; border-radius: 10px; overflow: hidden; text-decoration: none; color: inherit; } 
 .productBg { position: relative; width: 100%; height: 95vh; } 
 .productImage { object-fit: cover; } 
-.productContent { position: absolute; top: 60px; left: 100px; color: #fff; } 
+.productContent { position: absolute; top: 80px; left: 100px; color: #fff; } 
 .productNumber { font-size: 26px;line-height: 1em; color: #ABABAB; } 
 .productName { font-size: 60px;margin: 5px 0 15px; }
 .productContent > a{font-size:18px;line-height: 1em;}
+
+/*events*/
+.eventsWrap{padding: 150px 0 250px; background: #556075; position: relative;border-radius:100px 100px 0 0;margin-top: -100px;z-index: 1;}
+.eventsBody{margin: 0 180px;}
+.eventItem{display: flex;justify-content: center;align-items: center;}
+.eventImg>img{border-radius: 20px;} 
+.eventsSliderNav { position: absolute; top: 150px; right: 100px; display: flex;gap: 15px; z-index: 10; }
+.eventNavBtn{ width: 40px; height: 40px; background-image: url('/images/home/left-arrow.svg'); background-size: contain; background-repeat: no-repeat; cursor: pointer; }
+.eventNavBtn.eventsNextBtn { rotate: 180deg; }
+
+/*Insights Updates*/
+.insightsUpdatesWrap{padding: 150px 0 250px; background: #ECECEC; position: relative;border-radius:100px 100px 0 0;margin-top: -100px;z-index: 1;}
+.insightsUpdateHead{display: flex;justify-content: space-between;}
+.insightsUpdateGrid { display: grid; grid-template-columns: repeat(4,1fr); gap: 40px; margin: 45px 0 0; }
+.insightsUpdateGridItem {border-bottom: 1px solid #c4c4c4;padding-bottom: 22px; }
+.insightsUpdateGridItem img { width: 100%; border-radius: 20px; object-fit: cover; }
+.insightsUpdateGridItem span { display: block; font-size: 16px; color: #666666; margin: 40px 0 20px; }
+.insightsUpdateGridItem h4 { font-size: 26px; margin:0; color: #333333;font-family: var(--bold);}
+.insightsUpdateGridItem p { font-size: 18px;line-height: 1.5em; color: #111111; margin: 25px 0 50px; }
+.insightsUpdateGridItem a { font-size: 18px;font-family: var(--medium); color: #002581; cursor: pointer; }
+
+
