--- a/app/globals.css
+++ b/app/globals.css
@@ -32,6 +32,10 @@
         --black: 'neue_haas_grotesk_displa95Blk', sans-serif;
         --black-italic: 'neue_haas_grotesk_disp96BlkIt', sans-serif;
 
+
+        /*colors*/
+        --blue:#002581;
+
         
 
     }
