--- a/public/styles/mainstyle.css
+++ b/public/styles/mainstyle.css
@@ -105,7 +105,7 @@
 .ourProductsSliderNav { position: absolute; top: 60px; right: 100px; display: flex;gap: 15px; z-index: 10; }
 .ourProductsSlierNavBtn{ width: 40px; height: 40px; background-image: url('/images/home/left-arrow.svg'); background-size: contain; background-repeat: no-repeat; cursor: pointer; }
 .ourProductsSlierNavBtn.ourProductsSliderNextBtn { rotate: 180deg; }
-.productItem { display: block; position: relative; border-radius: 10px; overflow: hidden; text-decoration: none; color: inherit; } 
+.productItem { display: block; position: relative;overflow: hidden; text-decoration: none; color: inherit; } 
 .productBg { position: relative; width: 100%; height: 95vh; } 
 .productImage { object-fit: cover; } 
 .productContent { position: absolute; top: 80px; left: 100px; color: #fff; } 
